--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ branches:
   only:
   - master
   - dev
+image: Visual Studio 2017
 build_script:
   - ps: .\build.ps1 -Target Default -Configuration Release
 artifacts:
