--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,9 @@
-version: 1.0.0-alpha-{build}
+version: 1.0.1-alpha-{build}
 branches:
   only:
   - master
   - dev
+image: Visual Studio 2017
 build_script:
   - ps: .\build.ps1 -Target Default -Configuration Release
 artifacts:
